# sc-extract

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: csv.rs  errors.rs  lib.rs  main.rs  tex.rs  utils.rs
src/extractors/: csv.rs  mod.rs  tex.rs
tests/: test_csv.rs  test_sc.rs
tests/data/csv/: alliance_badges.csv
