[package]
name = "sc_extract"
version = "0.1.0"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A command-line tool to extract graphics and csv files from Supercell games."
homepage = "https://github.com/AriusX7/sc-extract"
repository = "https://github.com/AriusX7/sc-extract"
keywords = ["supercell", "brawlstars", "sc", "clashroyale", "clashofclans"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
byteorder = "1.3"
lzma-rs = "0.1"
image = "0.23"
colored = "1.9"
rayon = "1.3"
